# HR-Analysis

./: .gitignore  CLAUDE.md  README.md  employee_attrition_analysis.ipynb  pyproject.toml
output/: hr_attrition_export.csv
